@@ -11,12 +11,12 @@ import java.util.concurrent.Future;
 public class AppParallelyIntegral {
     public static void main(String[] args) throws InterruptedException, ExecutionException {
         long numSteps = 999999999;
-        int cntThreads = 1000;
+        int cntThreads = Runtime.getRuntime().availableProcessors();
         BigDecimal step = new BigDecimal(1./numSteps);
         long cntStepsPerThread= Math.round((numSteps / cntThreads) / 100);
 
         List<Future<BigDecimal>> list = new ArrayList<>();
-        ExecutorService e = Executors.newVirtualThreadPerTaskExecutor();
+        ExecutorService e = Executors.newFixedThreadPool(cntThreads);
 
         for (int i = 0; i < cntThreads; i++) {
             ArgsThread a = new ArgsThread(
